# photometricBA

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_submodules.sh  download_dataset.sh  install_dependencies.sh  run_format.sh
calib/: opt_calib.json  opt_calib_ds.json  opt_calib_eucm.json
calib/results_calib/ds/: solver_summary_ds.txt
calib/results_calib/eucm/: solver_summary_eucm.txt
calib/results_calib/pinhole/: opt_calib_pinhole.json  solver_summary_pinhole.txt
cmake_modules/: FindEigen3.cmake
data/euroc_V1/: timestamps.txt
data/euroc_calib/: calibration-double-sphere.json  detected_corners.json  init_poses.json
data/mav0/state_groundtruth_estimate0/: gt_poses_timestamps.txt
include/: align_trajectories.h  aprilgrid.h  calibration.h  camera_models.h  candidate_points.h  common_types.h  csv_reader.h  ex1.h  gui_helper.h  keypoints.h  map_utils.h  matching_utils.h  photo_utils.h  reprojection.h  serialization.h  statistical_utils.h  tracks.h  union_find.h  utils.h  vo_utils.h
src/: calibration.cpp  odometry.cpp  photo_sfm.cpp  sfm.cpp  test_ceres_se3.cpp
tmp/: candidates.cereal  matches.cereal
tools/: compute_histogram.py  generate_gt_poses.py
